# OOP4

./: CMakeLists.txt  README.md
code/include/: Array.h  Figure.h  Point.h  Rectangle.h  Square.h  Triangle.h
code/src/: main.cpp
include/: Array.h  Figure.h  Point.h  Rectangle.h  Square.h  Triangle.h
src/: main.cpp
test/: test_main.cpp
